@@ -1,30 +1,39 @@
-# General
-This project can be used as a starting project for your own projects which have a JavaFX GUI.
+Project_04_
 
-It contains all the necessary libraries to run Cucumber tests, JUnit 5 tests, and JUnit 4 tests. In addition, it contains the reference to the Mockito libraries.
+1. Our program runs using javafx
+2. Our users are added to the project through the Main, that is located in src/main/java/application.Main
+3. They are added by typing between line 30 and 35 using this following code:
+User abas = new User(<isProjectLeader>, <initials>, "<Full Name>");
+And then it will automatically get added to out list.
+4. Run the Program and only login using the initials.
 
-It is a good idea to change the name of the project. Don't forget to also change the name in the `pom.xml` file. 
+Creating project:
+1. To create the project the <isProjectLeader> statement needs to be true.
+2. After clicking "Create Project" Fill the different fields, and click submit.
+3. the projectleader who created the project is the only user that can edit the project
 
-# Java version
-If you use a different version than Java 11, then change the `maven.compiler.source` and `maven.compiler.target` properties in the `pom.xml` file. This should only be needed if you want to use Java 8. The setting Java 11 is compatible with all installed JDK's of version 11 or higher.
+Delete Project:
+1. To delete a project you simply click on it and press delete project with the user that created the project.
 
-# Running the tests
-The tests can be run through Maven, e.g., `mvn clean test`, Eclipse (select the project and then run as JUnit test), and ItelliJ (select the project and then run all tests). 
+Edit Project:
+1. Press on the Project and then press open project and then the edit button
+2. Now you can change the fields of the project
 
-In case of Eclipse, if the run configuration for the test is set to JUnit 4, all the Cucumber tests and all the JUnit 4 tests are run, but not the JUnit 5 tests. If the setting is set to JUnit 5, then all the tests are run.
+Creating Activity:
+1. After the project leader has created the project he can open the project, and press add activity, after that he types in the fields and select the developers he wants to work on it.
 
-# JavaFX
-This project contains also the references to JavaFX in the pom.xml file. Make sure that the main class is correctly set in the pom.xml file in the JavaFX plugin. 
+Delete Activity:
+1. You can do this by the same way you did with Delete project.
 
-To run the main class execute: `mvn javafx:run`. 
+Edit Activity:
+1. Press on the activity and then press the edit button
+2. Now you can change the time and name of the activity
 
-The project won't run in Eclipse and IntelliJ. Both IDE's need to add the JavaFX libraries as command line options to their run configurations.  For example `--module-path /path/to/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml`. Note that this requires to have the JavaFX SDK downloaded.
+Add remove people to the project:
+1. to remove or add people to the project simply choose a project and check or uncheck the people on the left.
 
-More information can be found at [https://openjfx.io/openjfx-docs/](https://openjfx.io/openjfx-docs/).
+Register time to an activity:
+1. to register time to an activity simply log in as the worker.
+2. open the project then the activity.
+3. then add how many hours you have worked on the project.
 
-## Not using JavaFX
-If you don't need JavaFX, you can remove the javafx entries from the pom.xml file.
-
-# Misc
-- Be sure to remove unnecessary tests, packages, classes, etc. from the example project in your final project. 
-- Remember to create a `README.txt` (plain text) or a `README.md` (using Markdown) file that explains how to build and run the tests and the application and any necessary information to use the information, e.g., a short user manual and a description of any preset logins with password, if required.
